# TECHIN517_Robot_Arm

./: .gitignore  README.md  commands.md  quantitative_results.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  bash_history.txt  setup.sh
ros2_ws/: .gitignore
ros2_ws/src/aruco_tracker_ros2/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/aruco_tracker_ros2/aruco_tracker_ros2/: aruco_code_tracker.py  aruco_cube_tracker.py  aruco_utils.py
ros2_ws/src/aruco_tracker_ros2/config/: aruco_code_tracker.yaml  aruco_cube_tracker.yaml
ros2_ws/src/aruco_tracker_ros2/launch/: aruco_code_tracker.launch.py  aruco_cube_tracker.launch.py
ros2_ws/src/lerobot-robot-rosetta/: README.md  package.xml  setup.py
ros2_ws/src/lerobot-robot-rosetta/lerobot_robot_rosetta/: __init__.py  config_rosetta.py  rosetta.py
ros2_ws/src/lerobot-teleoperator-rosetta/: README.md  package.xml  setup.py
ros2_ws/src/lerobot-teleoperator-rosetta/lerobot_teleoperator_rosetta/: __init__.py  config_rosetta_teleop.py  rosetta_teleop.py
ros2_ws/src/ros2_handeye_calibration/: .gitignore  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_handeye_calibration/hand_eye_calibration/: calibration_backend.py  node.py
ros2_ws/src/ros2_handeye_calibration/launch/: calibration.launch.py
ros2_ws/src/rosetta/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ros2_ws/src/rosetta/contracts/: so_101.yaml  so_101_hil.yaml  turtlebot3.yaml
ros2_ws/src/rosetta/launch/: episode_recorder_launch.py  rosetta_client_launch.py  rosetta_hil_launch.py
ros2_ws/src/rosetta/params/: episode_recorder.yaml  rosetta_client.yaml  rosetta_client_smolvla.yaml  rosetta_hil_manager.yaml
ros2_ws/src/rosetta/rosetta/: __init__.py  episode_recorder_node.py  port_bags.py  rosetta_client_node.py  rosetta_hil_manager_node.py
ros2_ws/src/rosetta/rosetta/common/: __init__.py  classifier_server.py  contract.py  contract_utils.py  converters.py  (+3 more)
ros2_ws/src/rosetta/scripts/: episode_recorder_node  port_bags  rosetta_client_node  rosetta_hil_manager_node
ros2_ws/src/rosetta_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rosetta_interfaces/action/: ManageEpisode.action  RecordEpisode.action  RunPolicy.action
ros2_ws/src/rosetta_interfaces/srv/: StartHILEpisode.srv  StartRecording.srv
ros2_ws/src/soa_ros2/: .gitmodules  README.md  build.sh  joints.csv
ros2_ws/src/soa_ros2/feetech_ros2_driver/: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  feetech_ros2_control_plugin_description.xml  package.xml  pixi.toml
ros2_ws/src/soa_ros2/feetech_ros2_driver/.github/workflows/: build_and_test.yaml  format.yaml
ros2_ws/src/soa_ros2/feetech_ros2_driver/doc/: developer.md  user.md
ros2_ws/src/soa_ros2/feetech_ros2_driver/feetech_driver/: CMakeLists.txt  README.md
ros2_ws/src/soa_ros2/feetech_ros2_driver/feetech_driver/cmake/: feetech_driver-config.cmake.in
ros2_ws/src/soa_ros2/feetech_ros2_driver/feetech_driver/examples/: demo.cpp
ros2_ws/src/soa_ros2/feetech_ros2_driver/feetech_driver/include/feetech_driver/: SMS_STS.h  common.hpp  communication_protocol.hpp  serial_port.hpp  version.hpp
ros2_ws/src/soa_ros2/feetech_ros2_driver/feetech_driver/src/: communication_protocol.cpp  serial_port.cpp
ros2_ws/src/soa_ros2/feetech_ros2_driver/include/feetech_ros2_driver/: feetech_ros2_driver.hpp
ros2_ws/src/soa_ros2/feetech_ros2_driver/src/: feetech_ros2_driver.cpp
ros2_ws/src/soa_ros2/soa_apps/: package.xml  setup.cfg  setup.py
ros2_ws/src/soa_ros2/soa_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/soa_ros2/soa_bringup/config/: bi_soa_cameras.yaml  bi_soa_params.yaml  soa_cameras.yaml  soa_params.yaml  soa_realsense2.yaml  soa_usb_cam.yaml
ros2_ws/src/soa_ros2/soa_bringup/launch/: bi_soa_bringup.launch.py  soa_bringup.launch.py
ros2_ws/src/soa_ros2/soa_bringup/launch/include/: cameras.launch.py
ros2_ws/src/soa_ros2/soa_bringup/rosetta_contracts/left_arm/: deal_face_up.yaml
ros2_ws/src/soa_ros2/soa_bringup/rosetta_contracts/right_arm/: collect_chip.yaml  deal_face_up.yaml  pay_out_chip.yaml
ros2_ws/src/soa_ros2/soa_bringup/rviz/: bi_soa.rviz  soa.rviz  soa_leader_follower.rviz
ros2_ws/src/soa_ros2/soa_bringup/soa_bringup/: calibration_loader.py  lerobot_norm_converters.py
ros2_ws/src/soa_ros2/soa_description/: CMakeLists.txt  package.xml
ros2_ws/src/soa_ros2/soa_functions/: package.xml  setup.cfg  setup.py
ros2_ws/src/soa_ros2/soa_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/soa_ros2/soa_moveit_config/bi_soa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/soa_ros2/soa_moveit_config/bi_soa_moveit_config/config/: bi_soa.ros2_control.xacro  bi_soa.srdf  bi_soa.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_hw.yaml  ompl_planning.yaml  ros2_controllers.yaml
ros2_ws/src/soa_ros2/soa_moveit_config/bi_soa_moveit_config/launch/: bi_soa_moveit_bringup.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
ros2_ws/src/soa_ros2/soa_teleop/: CMakeLists.txt  package.xml
ros2_ws/src/soa_ros2/soa_teleop/src/: bi_teleop_node.cpp  teleop_node.cpp
ros2_ws/src/yolo_ros/: Dockerfile  README.md  requirements.txt
ros2_ws/src/yolo_ros/yolo_bringup/: package.xml
ros2_ws/src/yolo_ros/yolo_msgs/: package.xml
ros2_ws/src/yolo_ros/yolo_ros/: package.xml  setup.py
scripts/: align_servo_homing.py  blackjack_game_loop.py  blackjack_game_loop_with_lerobot.py  card_detector.py  dashboard.py  dashboard_server.py  dashboard_ui.html  diag_card_cam.py  diag_offset.py  measure_cmd_offset.py  record_waypoints.py  replay_waypoints.py  set_wrist_torque.py  system_check.py  test_card_detector.py
waypoints/: README.md  left_draw_card.csv  left_draw_card_hold.csv  left_reveal_card.csv  phase1_initialize.csv  phase2_deal_dealer.csv  phase2_deal_player.csv  phase2_flip_dealer.csv  right_draw_card.csv
(+54 files in other folders)
