<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lerobot_robot_rosetta</name>
  <version>0.1.0</version>
  <description>LeRobot Robot plugin for Rosetta - bridges ROS2 topics to LeRobot Robot interface.</description>
  <maintainer email="isaac.blankenau@gmail.com">Isaac Blankenau</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rosetta</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
