<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>feetech_ros2_driver</name>
  <version>0.2.2</version>
  <description>ros2_control hardware interface for Feetech Servos</description>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruc</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/JafarAbdi/feetech_ros2_driver</url>
  <url type="bugtracker">
    https://github.com/JafarAbdi/feetech_ros2_driver/issues
  </url>
  <url type="repository">https://github.com/JafarAbdi/feetech_ros2_driver/</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>tl_expected</depend>
  <depend>spdlog</depend>
  <depend>fmt</depend>
  <depend>range-v3</depend>
  <depend>pkg-config</depend>
  <depend>libserial-dev</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
