<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soa_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configurations for SOA robot arm bringup</description>
  <maintainer email="42076119+htchr@users.noreply.github.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <!-- Launch infrastructure -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Robot description and URDF processing -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>soa_description</exec_depend>

  <!-- ros2_control: controller manager and controllers -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>

  <!-- Hardware driver -->
  <exec_depend>feetech_ros2_driver</exec_depend>

  <!-- TF utilities (static_transform_publisher for leader/follower overlay) -->
  <exec_depend>tf2_ros</exec_depend>

  <!-- Camera drivers (used when cameras:=true) -->
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <!-- Python runtime -->
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
